--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TA_Nizar_App"
+        android:theme="@style/SetTheme"
         tools:targetApi="31">
+        <activity android:name=".BluetoothActivity"/>
+        <activity android:name=".HomeActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
